# stock

./: .gitignore  README.md
day_trading/: README.md  get_kabutan.py  pyproject.toml
get_info/: CheckTechnicalBlocker.py  README.md  VolumeSpike.py  get_kabutan.py  pyproject.toml
get_info/lib/: args.py  slack.py  technical.py
swing_trading/: CheckTechnicalBlocker.py  README.md  get_kabutan.py
swing_trading/lib/: args.py  technical.py
