[project]
name = "get-stock-info"
version = "0.1.0"
description = "get stock info such as price, PER, PBR, and other statistics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "backtrader>=1.9.78.123",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
    "ta>=0.11.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "ruff>=0.14.9",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E203"]
fixable = ["ALL"]
unfixable = []
